--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
      <meta charset-"UTF-8">
      <title>TheBatman</title>
      <link rel="stylesheet" href="style.css">
+     <link rel="icon" href="icon hh.jpg" type="image/icon type">
     
-
 </head>
 <body>
     <header>
