--- a/dd.html
+++ b/dd.html
@@ -4,6 +4,7 @@
             <meta charset="UTF-8">
             <title>Document</title>
             <link rel="stylesheet" href="dd.css">
+            <link rel="icon" href="icon hh.jpg" type="image/icon type">
         </head>
 
             <body>
