--- a/gg.html
+++ b/gg.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="icon" href="icon hh.jpg" type="image/icon type">
   <title>Formulaire de Contact</title>
 </head>
 <body>
